--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h2>To-Do List</h2>
         <div class="row">
         <input type="text" id="input-area" placeholder="Oh what to do?">
-        <button>Add</button>
+        <button onclick="addTask()">Add</button>
         </div>
-        <ul id="listcontain">
+        <ul id="list-contain">
             <!-- <li class="check">Task 1</li>
             <li>Task 2</li>
             <li>Task 3</li> -->
